<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/idl_color_white"
    android:fitsSystemWindows="true">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/idl_color_blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- ScrollView para rolagem automática -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:background="@drawable/fieldset_background">

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:progress="0"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/custom_progressbar"/>

            <!-- CPF -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_badge_32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driver_cpf"
                    android:height="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/idl_color_black"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/label_cpf"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- CNH -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_badge_32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driver_cnh"
                    android:height="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/idl_color_black"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/label_cnh"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_badge_32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driver_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/idl_color_black"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/label_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Transport -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                app:endIconDrawable="@drawable/ic_badge_32">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/driver_transport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="12dp"
                    android:height="50dp"
                    android:textColor="@color/idl_color_black"
                    android:hint="@string/label_transport"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_contact_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driver_edit_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/idl_color_black"
                    android:hint="@string/label_phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Plate -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_car_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driver_edit_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/idl_color_black"
                    android:hint="@string/label_plate"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Divisor -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray" />

            <!-- Shipment -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_shipment_32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driver_edit_shipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/idl_color_black"
                    android:hint="@string/label_Shipment"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Button confirme -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_shipment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/label_button_add_shipment"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_finish"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:icon="@drawable/ic_item_ok"
                android:text="@string/label_button_finish"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:iconGravity="textStart"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>